objects/Alliance_OA_Projects__c.object
<CustomObject>
    <fields>
        <fullName>Onsite_Requested_Date__c</fullName>
        <label>Onsite Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Alliance_OA_360_Onboarding</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Created_Date__c</fullName>
        <label>Original Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Other_Badge_Type__c</fullName>
        <label>Other Badge Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oversold_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post Purchase Concern</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Oversold_Comment__c</fullName>
        <label>Post Purchase Concern Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Purchase_Reason__c</fullName>
        <label>Post Purchase Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Oversold_Check__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Service Expectations</fullName>
                </value>
                <value>
                    <fullName>Timelines</fullName>
                </value>
                <value>
                    <fullName>Contracting Issue</fullName>
                </value>
                <value>
                    <fullName>Not a Fit/Workaround Reliant</fullName>
                </value>
                <value>
                    <fullName>Presold Feature</fullName>
                </value>
                <value>
                    <fullName>No TSC/Demo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pre_Printing_Details__c</fullName>
        <label>Pre-Printing Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pre_printed_graphics_on_Badges__c</fullName>
        <label>Pre-printed graphics on Badges</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pre_printing_of_Attendee_Badges__c</fullName>
        <label>Pre-printing of Attendee Badges</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Printable_Badge_Area__c</fullName>
        <label>Printable Badge Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Singe Sided</fullName>
                </value>
                <value>
                    <fullName>Double Sided</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Kickoff_date__c</fullName>
        <label>Project Kickoff date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Alliance_OA_360_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Link__c</fullName>
        <label>Purchase Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Type__c</fullName>
        <label>Purchase Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct to Exhibitor</fullName>
                </value>
                <value>
                    <fullName>Direct to Planner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>Australia </fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>South America</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registration_Integration__c</fullName>
        <label>Registration Integration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corelan Notes</fullName>
                </value>
                <value>
                    <fullName>GRP</fullName>
                </value>
                <value>
                    <fullName>Maritz</fullName>
                </value>
                <value>
                    <fullName>RTS</fullName>
                </value>
                <value>
                    <fullName>SFORCE</fullName>
                </value>
                <value>
                    <fullName>Corelan</fullName>
                </value>
                <value>
                    <fullName>CDS</fullName>
                </value>
                <value>
                    <fullName>EventsForce</fullName>
                </value>
                <value>
                    <fullName>AllianceTech</fullName>
                </value>
                <value>
                    <fullName>Cvent</fullName>
                </value>
                <value>
                    <fullName>Lanyon</fullName>
                </value>
                <value>
                    <fullName>Active (Gartner)</fullName>
                </value>
                <value>
                    <fullName>Tableau_Eloqua</fullName>
                </value>
                <value>
                    <fullName>Corelan REST</fullName>
                </value>
                <value>
                    <fullName>SXSW</fullName>
                </value>
                <value>
                    <fullName>Tableau_Form_Export</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rental_Type__c</fullName>
        <label>Rental Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Warehouse</fullName>
                </value>
                <value>
                    <fullName>Choose to rent</fullName>
                </value>
                <value>
                    <fullName>Hartford</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reporting_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporting Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Alliance_Tech_OA_360_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reporting_to_be_Delivered__c</fullName>
        <label>Reporting to be Delivered</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Core</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Tier__c</fullName>
        <formula>Account_Name__r.Service_Tier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_Included__c</fullName>
        <label>Services Included</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Check in</fullName>
                </value>
                <value>
                    <fullName>Attendance</fullName>
                </value>
                <value>
                    <fullName>Lead Retrieval</fullName>
                </value>
                <value>
                    <fullName>Exhibitor</fullName>
                </value>
                <value>
                    <fullName>C4P</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Materials Redemption</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>Badge Printing</fullName>
                </value>
                <value>
                    <fullName>Onsite Support</fullName>
                </value>
                <value>
                    <fullName>Crowd Compass</fullName>
                </value>
                <value>
                    <fullName>Session Access Control</fullName>
                </value>
                <value>
                    <fullName>Session Tracking</fullName>
                </value>
                <value>
                    <fullName>LeadCapture Device Rental</fullName>
                </value>
                <value>
                    <fullName>LeadCapture Application Only</fullName>
                </value>
                <value>
                    <fullName>CrowdCompass Lead Retrieval</fullName>
                </value>
                <value>
                    <fullName>Social Wall</fullName>
                </value>
                <value>
                    <fullName>On Arrival Standalone</fullName>
                </value>
                <value>
                    <fullName>Advanced Printing</fullName>
                </value>
                <value>
                    <fullName>RFID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Session_Integration__c</fullName>
        <label>Session Integration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corelan</fullName>
                </value>
                <value>
                    <fullName>Sforce</fullName>
                </value>
                <value>
                    <fullName>EventsForce</fullName>
                </value>
                <value>
                    <fullName>Cvent</fullName>
                </value>
                <value>
                    <fullName>Corelan REST</fullName>
                </value>
                <value>
                    <fullName>Oasis</fullName>
                </value>
                <value>
                    <fullName>SXSW</fullName>
                </value>
                <value>
                    <fullName>Maritz</fullName>
                </value>
                <value>
                    <fullName>Certain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ship_to_Event_Date__c</fullName>
        <label>Ship to Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipment_to_Arrival_Date__c</fullName>
        <label>Shipment to Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipment_to_Departure_Date__c</fullName>
        <label>Shipment Departure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <label>Shipping Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_Cost__c</fullName>
        <label>Shipping Cost($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipping_Delivery_Date__c</fullName>
        <label>Shipping Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipping_Return_Date__c</fullName>
        <label>Shipping Return Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipping_Revenue__c</fullName>
        <label>Shipping Revenue($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shopify_Number__c</fullName>
        <label>Shopify Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_L2__c</fullName>
        <label>Status L2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mistake/Duplicate</fullName>
                </value>
                <value>
                    <fullName>Cancelled Event</fullName>
                </value>
                <value>
                    <fullName>Cancelled Contract</fullName>
                </value>
                <value>
                    <fullName>Unresponsive client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Forecasted</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Work in Progress</fullName>
                </value>
                <value>
                    <fullName>Onsite</fullName>
                </value>
                <value>
                    <fullName>Post Event</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Approved by CS</fullName>
                </value>
                <value>
                    <fullName>Pending Contract</fullName>
                </value>
                <value>
                    <fullName>Contract Signed</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Cost1__c</fullName>
        <label>Support Cost($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Support_Cost__c</fullName>
        <label>Support Cost</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Revenue1__c</fullName>
        <label>Support Revenue($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Support_Revenue__c</fullName>
        <label>Support Revenue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Sent_Date__c</fullName>
        <label>Survey Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bronze</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Platinum </fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Application_Downloads__c</fullName>
        <label>Total Application Downloads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Device_Rentals__c</fullName>
        <label>Total Device Rentals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Revenue__c</fullName>
        <label>Total Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_of_Name_Badges__c</fullName>
        <label>Total # of Name Badges</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tracking_Link__c</fullName>
        <label>Tracking Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Type_of_Onsite__c</fullName>
        <label>Type of Onsite</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account Review/CSR</fullName>
                </value>
                <value>
                    <fullName>Client Training</fullName>
                </value>
                <value>
                    <fullName>General Meeting</fullName>
                </value>
                <value>
                    <fullName>Onsite support for attendees</fullName>
                </value>
                <value>
                    <fullName>Onsite support for planners</fullName>
                </value>
                <value>
                    <fullName>Pre-Sale Meeting </fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Printers__c</fullName>
        <label>Type of Printers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Printronix RFID</fullName>
                </value>
                <value>
                    <fullName>Zebra P430i (non-RFID)</fullName>
                </value>
                <value>
                    <fullName>Zebra P430i (RFID)</fullName>
                </value>
                <value>
                    <fullName>Swift</fullName>
                </value>
                <value>
                    <fullName>Zebra ZD 500</fullName>
                </value>
                <value>
                    <fullName>Zebra ZD 500r</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Zebra GK</fullName>
                </value>
                <value>
                    <fullName>Zebra GX</fullName>
                </value>
                <value>
                    <fullName>XXL Printer</fullName>
                </value>
                <value>
                    <fullName>ZXP Printer</fullName>
                </value>
                <value>
                    <fullName>Epson Printer</fullName>
                </value>
                <value>
                    <fullName>ZC10L</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Who_is_booking_hotel__c</fullName>
        <label>Who is booking hotel?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Cvent Travel</fullName>
                </value>
                <value>
                    <fullName>I do not know yet </fullName>
                </value>
                <value>
                    <fullName>NA - the location is local</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Who_is_booking_transportation__c</fullName>
        <label>Who is booking transportation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Cvent Travel</fullName>
                </value>
                <value>
                    <fullName>I do not know yet </fullName>
                </value>
                <value>
                    <fullName>NA - the location is local</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_12_Overhead_Entrances__c</fullName>
        <label># of 12' Overhead Entrances</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_25_Overhead_Entrances__c</fullName>
        <label># of 25'+ Overhead Entrances</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_6_Overhead_Entrances__c</fullName>
        <label># of 6' Overhead Entrances</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_6_RFID_Mat_Entrances__c</fullName>
        <label># of 6' RFID Mat Entrances</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Additional_250_Badge_Stock_ordered__c</fullName>
        <label># of Additional Badges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Additional_Rental_Days_ordered__c</fullName>
        <label># of Additional Rental Days ordered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Agile_Story_Points__c</fullName>
        <label># of Agile Story Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Attendees__c</fullName>
        <label># of Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Badge_Holders__c</fullName>
        <label># of Badge Holders</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Badge_Types__c</fullName>
        <label># of Badge Types</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Check_in_Admin_Stations__c</fullName>
        <label># of Check in Admin Stations</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Check_in_iPads__c</fullName>
        <label># of Check in iPads</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Conference_Surveys__c</fullName>
        <label># of Conference Surveys</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Contractors_Used__c</fullName>
        <label># of Contractors Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Credit_Card_Readers__c</fullName>
        <label># of Credit Card Readers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Custom_Lead_Surveys__c</fullName>
        <label># of Custom Lead Surveys</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Cvent_Staff_Used__c</fullName>
        <label># of Onsite Staff Needed</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_EIB_Large_Purchases__c</fullName>
        <label># of EIB Large Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_EIB_Large_Rentals__c</fullName>
        <label># of EIB Large Rentals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_EIB_Lite_Rentals__c</fullName>
        <description># 11820358</description>
        <label># of EIB Lite Rentals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_EIB_Regular_Purchases__c</fullName>
        <label># of EIB Regular Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_EIB_Regular_Rentals__c</fullName>
        <label># of EIB Regular Rentals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Exhibitor_Readpoints__c</fullName>
        <label># of Exhibitor Readpoints</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Exhibitors__c</fullName>
        <label># of Exhibitors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Hallway_Readers__c</fullName>
        <label># of Hallway Readers</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Lanyards__c</fullName>
        <label># of Lanyards</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_LeadCapture_Application_Only__c</fullName>
        <label># of LeadCapture Application Only</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_LeadCapture_Honeywell_Sleds__c</fullName>
        <label># of Lead Retrieval Honeywell Sleds</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_LeadCapture_RFID_sleds__c</fullName>
        <label># of Lead Retrieval RFID sleds</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_LeadCapture_iPods__c</fullName>
        <label># of Lead Retrieval iPods</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Lead_Retrieval_iPads__c</fullName>
        <label># of Lead Retrieval iPads</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Materials_Redemption_iPads__c</fullName>
        <label># of Materials Redemption iPads</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Now_Next_Digital_Signage__c</fullName>
        <label># of Now/Next Digital Signage</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Onsite_Staff__c</fullName>
        <label># of Onsite Staff</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Printers__c</fullName>
        <label># of Printers</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_QR_Code_Tap_N_Go_iPads__c</fullName>
        <label># of QR Code Tap 'N Go iPads</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_RFID_Tap_N_Go_iPads__c</fullName>
        <label># of RFID Tap 'N Go iPads</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Registration_Areas__c</fullName>
        <label># of Registration Areas</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Routers__c</fullName>
        <label># of Routers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Session_Scanner_Devices__c</fullName>
        <label># of Session Scanner Devices</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Session_Surveys__c</fullName>
        <label># of Session Surveys</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Sessions__c</fullName>
        <label># of Sessions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Total_Leads_Scanned__c</fullName>
        <label># of Total Leads Scanned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_checkin_iPads_used__c</fullName>
        <label># of checkin iPads used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Onsite Solutions Project</label>
    <nameField>
        <displayFormat>OS-{0000}</displayFormat>
        <label>Project Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onsite Solutions Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>Alliance_Tech_Events</fullName>
        <columns>Event_Start_Date__c</columns>
        <columns>Event_Set_Up_Starts__c</columns>
        <columns>Event_Completion_Date__c</columns>
        <columns>NAME</columns>
        <columns>Event_Name__c</columns>
        <columns>Leads_PM__c</columns>
        <columns>Event_Venue__c</columns>
        <columns>Event_City__c</columns>
        <columns>of_LeadCapture_Honeywell_Sleds__c</columns>
        <columns>of_LeadCapture_iPods__c</columns>
        <columns>of_LeadCapture_RFID_sleds__c</columns>
        <columns>Total_Revenue__c</columns>
        <columns>of_Exhibitors__c</columns>
        <columns>AM_Event__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Alliance_OA_Projects__c.OnArrival</value>
        </filters>
        <label>Alliance Tech Events_LR</label>
        <language>en_US</language>
        <sharedTo>
            <group>CS_Leadership</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Event_Name</fullName>
        <columns>NAME</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Account_Name__c</columns>
        <columns>Cvent_Account_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Alliance_OA_Projects__c.Universal_Lead_Retrieval,Alliance_OA_Projects__c.Alliance_Tech,Alliance_OA_Projects__c.OnArrival</value>
        </filters>
        <label>Event Name</label>
        <language>en_US</language>
    </listViews>
</CustomObject>